# taille-auth

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: deploy.yml  test.yml
src/: helpers.rs  main.rs
src/auth/: handlers.rs  mod.rs
src/auth/dto/: login_dto.rs
src/auth/rto/: login_rto.rs  mod.rs
src/shared/: config.rs  database.rs  handlers.rs  hash_worker.rs  health_check.rs  master_key_middleware.rs  mod.rs  role.rs  user_repository.rs
src/shared/middleware/: master_key_middleware.rs
src/shared/model/: user.rs
src/shared/repository/: user_repository.rs
src/shared/rto/: created_rto.rs
src/user/: mod.rs
src/user/dto/: create_user_dto.rs
src/users/: handlers.rs  mod.rs
src/users/dto/: create_user_dto.rs
src/users/repository/: user_repository.rs
src/users/rto/: find_user_rto.rs  mod.rs
static/: scalar_docs.js
