[package]
name = "taille-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.19"
validator_derive = "0.19"
bcrypt = "0.14"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.23.0"
actix-governor = "0.8.0"
actix-web-httpauth = "0.8.2"
subtle = "2.6.1"
nanoid = "0.4.0"
thiserror = "2.0.10"
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.59.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
rayon = "1.10.0"
chrono = "0.4.39"
fake = "3.1.0"
flume = "0.11.1"
async-trait = "0.1.85"

[dev-dependencies]
actix-rt = "2.10.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["json"] }
